--- a/data/project.json
+++ b/data/project.json
@@ -1,21 +1,27 @@
 {
-  "users": [],
   "publish": {
-    "publishPagesApp": false,
-    "publishSHA": "",
-    "publishISODate": ""
+    "publish_pages_app": true,
+    "publish_sha": "",
+    "publish_iso_date": ""
   },
+  "users": [],
   "project": {
-    "title": "Zora Neale Hurston’s Works Progress Administration Recordings",
-    "description": "",
-    "language": "",
-    "slug": "",
-    "authors": "",
-    "mediaPlayer": "universal",
-    "autoPopulateHomePage": "true",
-    "additionalUsers": [],
-    "": {},
-    "createdAt": "",
-    "updatedAt": ""
+    "github_org": "dviljoen03",
+    "is_private": false,
+    "title": "The Transformation of Silence into Language and Action",
+    "description": "“The Transformation of Silence into Language and Action” in Sister Outsider by Audre Lorde, read by Audre Lorde.\n",
+    "language": "en",
+    "slug": "silence-language-action",
+    "creator": "dviljoen03",
+    "authors": "Danae Viljoen",
+    "media_player": "avannotate",
+    "auto_populate_home_page": true,
+    "additional_users": [],
+    "tags": {
+      "tagGroups": [],
+      "tags": []
+    },
+    "created_at": "2025-03-31T09:34:22.697Z",
+    "updated_at": "2025-03-31T09:34:22.697Z"
   }
 }
