--- a/data/project.json
+++ b/data/project.json
@@ -22,6 +22,8 @@
       "tags": []
     },
     "created_at": "2025-03-31T09:34:22.697Z",
-    "updated_at": "2025-03-31T09:34:22.697Z"
-  }
+    "updated_at": "2025-03-31T15:05:36.508Z",
+    "generate_pages_site": true
+  },
+  "is_private": false
 }
