--- a/data/project.json
+++ b/data/project.json
@@ -16,19 +16,13 @@
     "authors": "Danae Viljoen",
     "media_player": "avannotate",
     "auto_populate_home_page": true,
-    "additional_users": [
-      {
-        "login_name": "saamturner",
-        "avatar_url": "https://avatars.githubusercontent.com/u/157153031?v=4",
-        "admin": false
-      }
-    ],
+    "additional_users": [],
     "tags": {
       "tagGroups": [],
       "tags": []
     },
     "created_at": "2025-03-31T09:34:22.697Z",
-    "updated_at": "2025-03-31T15:24:01.282Z",
+    "updated_at": "2025-03-31T19:44:15.876Z",
     "generate_pages_site": true
   },
   "is_private": false
