--- a/data/project.json
+++ b/data/project.json
@@ -1,1 +1,131 @@
-{"publish":{"publish_pages_app":true,"publish_sha":"","publish_iso_date":""},"users":[],"project":{"github_org":"dviljoen03","is_private":false,"title":"The Transformation of Silence into Language and Action","description":"“The Transformation of Silence into Language and Action” in Sister Outsider by Audre Lorde, read by Audre Lorde.\n","language":"en","slug":"silence-language-action","creator":"dviljoen03","authors":"Danae Viljoen","media_player":"avannotate","auto_populate_home_page":true,"additional_users":[],"tags":{"tagGroups":[{"category":"Background","color":"#ADFFD9"},{"category":"Form","color":"#ADFEFF"},{"category":"Performance","color":"#99E6FF"},{"category":"Extra-Poetic Sounds","color":"#88C9F2"},{"category":"_uncategorized_","color":"#A3A3A3"}],"tags":[{"tag":"Transcription","category":"Background"},{"tag":"Context","category":"Background"},{"tag":"Identification","category":"Background"},{"tag":"Definition","category":"Background"},{"tag":"Caesura","category":"Form"},{"tag":"Rhyme","category":"Form"},{"tag":"Meter","category":"Form"},{"tag":"Verse Structure","category":"Form"},{"tag":"Tempo","category":"Performance"},{"tag":"Pitch","category":"Performance"},{"tag":"Duration","category":"Performance"},{"tag":"Amplitude","category":"Performance"},{"tag":"Timbre","category":"Performance"},{"tag":"Technical Sounds","category":"Extra-Poetic Sounds"},{"tag":"Speech","category":"Extra-Poetic Sounds"},{"tag":"Ambient Noise","category":"Extra-Poetic Sounds"},{"tag":"Audience Sounds","category":"Extra-Poetic Sounds"},{"category":"_uncategorized_","tag":"Transciption"},{"category":"_uncategorized_","tag":"Annotation"},{"category":"_uncategorized_","tag":"Technical Sound"}]},"created_at":"2025-03-31T09:34:22.697Z","updated_at":"2025-03-31T21:01:32.445Z","generate_pages_site":true},"is_private":false}
+{
+  "publish": {
+    "publish_pages_app": true,
+    "publish_sha": "",
+    "publish_iso_date": ""
+  },
+  "users": [],
+  "project": {
+    "github_org": "dviljoen03",
+    "is_private": false,
+    "title": "The Transformation of Silence into Language and Action",
+    "description": "“The Transformation of Silence into Language and Action” in Sister Outsider by Audre Lorde, read by Audre Lorde.\n",
+    "language": "en",
+    "slug": "silence-language-action",
+    "creator": "dviljoen03",
+    "authors": "Danae Viljoen",
+    "media_player": "avannotate",
+    "auto_populate_home_page": true,
+    "additional_users": [],
+    "tags": {
+      "tagGroups": [
+        {
+          "category": "Background",
+          "color": "#ADFFD9"
+        },
+        {
+          "category": "Form",
+          "color": "#ADFEFF"
+        },
+        {
+          "category": "Performance",
+          "color": "#99E6FF"
+        },
+        {
+          "category": "Extra-Poetic Sounds",
+          "color": "#88C9F2"
+        },
+        {
+          "category": "_uncategorized_",
+          "color": "#A3A3A3"
+        }
+      ],
+      "tags": [
+        {
+          "tag": "Transcription",
+          "category": "Background"
+        },
+        {
+          "tag": "Context",
+          "category": "Background"
+        },
+        {
+          "tag": "Identification",
+          "category": "Background"
+        },
+        {
+          "tag": "Definition",
+          "category": "Background"
+        },
+        {
+          "tag": "Caesura",
+          "category": "Form"
+        },
+        {
+          "tag": "Rhyme",
+          "category": "Form"
+        },
+        {
+          "tag": "Meter",
+          "category": "Form"
+        },
+        {
+          "tag": "Verse Structure",
+          "category": "Form"
+        },
+        {
+          "tag": "Tempo",
+          "category": "Performance"
+        },
+        {
+          "tag": "Pitch",
+          "category": "Performance"
+        },
+        {
+          "tag": "Duration",
+          "category": "Performance"
+        },
+        {
+          "tag": "Amplitude",
+          "category": "Performance"
+        },
+        {
+          "tag": "Timbre",
+          "category": "Performance"
+        },
+        {
+          "tag": "Technical Sounds",
+          "category": "Extra-Poetic Sounds"
+        },
+        {
+          "tag": "Speech",
+          "category": "Extra-Poetic Sounds"
+        },
+        {
+          "tag": "Ambient Noise",
+          "category": "Extra-Poetic Sounds"
+        },
+        {
+          "tag": "Audience Sounds",
+          "category": "Extra-Poetic Sounds"
+        },
+        {
+          "category": "_uncategorized_",
+          "tag": "Transciption"
+        },
+        {
+          "category": "_uncategorized_",
+          "tag": "Annotation"
+        },
+        {
+          "category": "_uncategorized_",
+          "tag": "Technical Sound"
+        }
+      ]
+    },
+    "created_at": "2025-03-31T09:34:22.697Z",
+    "updated_at": "2025-03-31T21:01:33.405Z",
+    "generate_pages_site": true
+  },
+  "is_private": false
+}
